--- a/src/components/Navigation/Curtain/Curtain.module.sass
+++ b/src/components/Navigation/Curtain/Curtain.module.sass
@@ -1,14 +1,5 @@
-@use 'src/styles/colors'
+@use '../../../styles/colors'
 
-//.container
-//  top: 0
-//  left: 0
-//  position: fixed
-//  z-index: 100
-//  width: 100vw
-//  display: flex
-//  align-items: flex-end
-//  transition: all .5s cubic-bezier(.3,0,.5,1)
 
 .wrapper
   top: 0
@@ -17,9 +8,6 @@
   z-index: 100
   height: 100vh
   width: 100vw
-  //width: 100%
-  //height: 0
-  //position: absolute
   opacity: 1
   background: #0f141e
   color: white
@@ -30,23 +18,25 @@
   transition: all .5s cubic-bezier(.3,0,.5,1)
   transform: translateY(100%)
 
+
 // - Exit animation
 .exit
   opacity: 1
   transform: translateY(0)
-  //height: 100%
+  & .middle_container
+    opacity: 1
   & footer
     opacity: 1 !important
   & li
     opacity: 1
 
-
 .exitActive
   opacity: 1
   transform: translateY(-100%)
-  //height: 0
+  & .middle_container
+    opacity: 0
   & footer
-    opacity: 1 !important
+    opacity: 0 !important
   & li
     transition: all 20ms !important
     opacity: 0
@@ -55,7 +45,8 @@
   transition: none
   opacity: 1
   transform: translateY(100%)
-  //height: 0
+  & .middle_container
+    opacity: 0
   & footer
     bottom: -2px
     opacity: 0
@@ -63,11 +54,13 @@
     transition-delay: 0ms !important
     opacity: 0
 
+
 // + Enter animation
 .enter
   opacity: 1
   transform: translateY(100%)
-  //height: 0
+  & .middle_container
+    opacity: 1
   & footer
     bottom: -2px
     opacity: 0 !important
@@ -79,7 +72,6 @@
 .enterActive
   opacity: 1
   transform: translateY(0)
-  //height: 100%
   & footer
     bottom: 10px
     opacity: 1 !important
@@ -91,7 +83,6 @@
 .enterDone
   opacity: 1
   transform: translateY(0)
-  //height: 100%
   & footer
     bottom: 10px
     opacity: 1 !important
@@ -99,7 +90,6 @@
     opacity: 1 !important
   & .title
     opacity: 1
-
 
 
 .header_wrapper
@@ -145,10 +135,12 @@
 
 
 .middle_container
+  opacity: 1
   position: fixed
   top: 50%
   transform: translateY(-54%)
   color: colors.$mainGray
+  transition: all 200ms !important
   text-align: center
 
 .title
