--- a/src/containers/Home/Home.module.sass
+++ b/src/containers/Home/Home.module.sass
@@ -61,6 +61,8 @@
 .projects_list
   width: 100%
   margin-top: 60px
+
+.projects_list, .title_container
   & > h5
     margin: 0
     font-size: .875rem
