--- a/src/components/Navigation/Curtain/Curtain.module.sass
+++ b/src/components/Navigation/Curtain/Curtain.module.sass
@@ -1,7 +1,7 @@
 @use '../../../styles/colors'
 
 
-.wrapper
+.container
   top: 0
   left: 0
   position: fixed
@@ -11,16 +11,65 @@
   opacity: 1
   background: #0f141e
   color: white
+  transition: all .5s cubic-bezier(.3,0,.5,1)
+  transform: translateY(100%)
+
+.wrapper
+  width: 100%
+  height: 100%
+
+.navMenu, .pageLoading, .pageLoading_sep
+  position: relative
+  width: 100%
+  height: 100%
   display: flex
   flex-direction: column
   justify-content: center
   align-items: center
-  transition: all .5s cubic-bezier(.3,0,.5,1)
-  transform: translateY(100%)
 
+.navMenu
+  transition: all 300ms
+  opacity: 1
+
+.pageLoading_back
+  opacity: .06
+  position: absolute
+  transform: scaleX(-1) 
+  object-position: right
+  //background: url("../../../../public/images/loading_back.jpg") right
+  transition: all 300ms !important
+  transition-delay: 280ms !important
+  max-width: 100vw
+  height: 100vh
+  & img
+    object-fit: cover
+    height: 100%
+
+.pageLoading
+  transition: all 100ms
+  transition-delay: 280ms
+  opacity: 0
+
+.pageLoading_sep
+  opacity: 1 !important
+  & .wait_container
+    transition-delay: 500ms !important
+  & .pageLoading_back
+    opacity: .06 !important
+
+.pageAnimation
+  & .navMenu
+    opacity: 0
+  & .pageLoading
+    opacity: 1
+  & .pageLoading_back
+    opacity: .06
+  & .wait_container
+    transform: translateY(0)
+    opacity: 1
 
 // - Exit animation
-.exit
+.exitMove
   opacity: 1
   transform: translateY(0)
   & .middle_container
@@ -29,8 +78,10 @@
     opacity: 1 !important
   & li
     opacity: 1
+  & .wait_container
+    opacity: 1 !important
 
-.exitActive
+.exitActiveMove
   opacity: 1
   transform: translateY(-100%)
   & .middle_container
@@ -40,8 +91,12 @@
   & li
     transition: all 20ms !important
     opacity: 0
+  & .wait_container
+    transition: all 250ms !important
+    transform: translateY(30px)
+    opacity: 0 !important
 
-.exitDone
+.exitDoneMove
   transition: none
   opacity: 1
   transform: translateY(100%)
@@ -55,8 +110,43 @@
     opacity: 0
 
 
+.exitFade
+  opacity: 1
+  transform: translateY(0)
+  & .middle_container
+    opacity: 1
+  & footer
+    opacity: 1 !important
+  & li
+    opacity: 1
+
+.exitActiveFade
+  opacity: 0
+  transform: translateY(0)
+  & .middle_container
+    opacity: 0
+  & footer
+    opacity: 0 !important
+  & li
+    transition: all 100ms !important
+    opacity: 0
+
+.exitDoneFade
+  transition: none !important
+  opacity: 1
+  transform: translateY(100%)
+  & .middle_container
+    opacity: 0
+  & footer
+    bottom: -2px
+    opacity: 0
+  & li
+    transition-delay: 0ms !important
+    opacity: 0
+
+
 // + Enter animation
-.enter
+.enterMove
   opacity: 1
   transform: translateY(100%)
   & .middle_container
@@ -68,8 +158,11 @@
     opacity: 0
   & .title
     opacity: 0
+  & .pageLoading_sep .wait_container
+    transform: translateY(30px)
+    opacity: 0
 
-.enterActive
+.enterActiveMove
   opacity: 1
   transform: translateY(0)
   & footer
@@ -79,8 +172,11 @@
     opacity: 1 !important
   & .title
     opacity: 1
+  & .pageLoading_sep .wait_container
+    transform: translateY(0)
+    opacity: 1
 
-.enterDone
+.enterDoneMove
   opacity: 1
   transform: translateY(0)
   & footer
@@ -90,48 +186,9 @@
     opacity: 1 !important
   & .title
     opacity: 1
-
-
-.header_wrapper
-  top: 0
-  left: 0
-  color: colors.$mainGray
-  height: 100vh
-  width: 100vw
-  display: flex
-  flex-direction: column
-  z-index: 100
-  transition: all .5s cubic-bezier(.3,0,.5,1)
-  opacity: 0
-  transform: translateY(100%)
-
-.left, .right
-  display: flex
-  flex-direction: row
-  align-items: center
-
-.left
-  height: 100%
-
-.right
-  & span
-    font-size: .8rem
-    text-transform: uppercase
-    font-family: "Helvetica Extra Bold", sans-serif
-    letter-spacing: .2em
-
-.logo
-  height: 97%
-  width: fit-content
-  object-fit: contain
-  margin-right: 12px
-
-.titleSvg
-  height: 75%
-
-.menu_icon
-  font-size: 25px
-  margin-left: 15px
+  & .pageLoading_sep .wait_container
+    transform: translateY(0)
+    opacity: 1
 
 
 .middle_container
@@ -185,3 +242,58 @@
   font-family: "Helvetica Regular", sans-serif
   transition: all .4s cubic-bezier(.3,0,.5,1)
   transition-delay: 400ms !important
+
+.pulse_container
+  width: 100%
+  display: flex
+  justify-content: center
+
+.pulse_circle
+  animation: sk-scaleout 1s infinite ease-in-out
+  background-color: #878a8f
+  border-radius: 100%
+  position: absolute
+  left: 50%
+  top: 50%
+  z-index: 10
+  transform-origin: 50%
+  width: 40px
+  height: 40px
+  margin-left: -20px
+  margin-top: -20px
+
+.wait_container
+  position: fixed
+  left: 0
+  bottom: 0
+  margin: 14px
+  transform: translateY(30px)
+  opacity: 0
+  transition: all .4s cubic-bezier(.3,0,.5,1) 300ms
+  & h1
+    margin: 0
+    font-size: 2.125rem
+    line-height: 2.5rem
+    padding-top: 2px
+    padding-bottom: 3px
+    color: #e7e8e9
+    font-family: "Helvetica ExtBlk", sans-serif
+    letter-spacing: .1rem
+  & h5
+    font-family: "Helvetica Light", sans-serif
+    margin: 0
+    font-size: .875rem
+    line-height: 1.25rem
+    text-transform: uppercase
+    padding-top: 5px
+    padding-bottom: 5px
+    color: #e7e8e9
+    letter-spacing: .4em
+
+@keyframes sk-scaleout
+  from
+    transform: scale(0)
+
+  to
+    transform: scale(1)
+    opacity: 0
